# GOOGLE_AVATAR

./: .env  .gitignore  README.md  bot.py  llm.py  main.py  package-lock.json  package.json  speak.py  voice.py
genai-backend/: README.md  main.py  pyproject.toml  requirements.txt
genai-backend/app/: database.py  main.py  models.py
genai-backend/app/core/: config.py  database.py
genai-backend/app/models/: user.py
genai-backend/app/routers/: auth.py  user.py
genai-frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
genai-frontend/src/: App.css  App.tsx  index.css  main.tsx
genai-frontend/src/components/: ChatInterface.tsx  DocumentUpload.tsx  HistoryTab.tsx  LawyerRecommendations.tsx
genai-frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
genai-frontend/src/stores/: authStore.ts
genai-frontend/src/types/: index.ts
genai-frontend/src/utils/: api.ts
src/components/: HistoryTab.tsx
src/contexts/: AuthContext.tsx
src/pages/: Dashboard.tsx  SignupPage.tsx
src/types/: index.ts
src/utils/: api.ts
